--- a/beauty-app/src/app/pages/new-post/new-post.page.html
+++ b/beauty-app/src/app/pages/new-post/new-post.page.html
@@ -1,12 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>New Post</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
   <ion-grid>
     <ion-row>
@@ -14,24 +5,32 @@
       <ion-col size="12" size-md="8" size-md="4">
         <ion-row>
           <ion-col size="12">
-            <ion-label>Title:</ion-label>
-            <input type="text" class="input" [(ngModel)]="title">
-          </ion-col>
-          <ion-col class="ion-text-center" size="6">
-            <ion-button (click)="photoPic()" color="tertiary">
-              <ion-icon slot="start" name="camera"></ion-icon>
-              Camera
-            </ion-button>
-          </ion-col>
-          <ion-col class="ion-text-center" size="6">
-            <ion-button (click)="openGallery()" color="tertiary">
-              <ion-icon slot="start" name="image"></ion-icon>
-              Gallery
-            </ion-button>
-          </ion-col>
-          <ion-col *ngFor="let photo of photos; let i = index;" size="6">
-            <ion-icon color="danger" name="close" class="trash" (click)="deletePhoto(i)"></ion-icon>
-            <img [src]="photo">
+            <div *ngIf="photos.length === 1">
+              <img class="img-post" src="{{photos[0]}}" alt="">
+            </div>
+            <div *ngIf="photos.length > 1">
+              <ion-slides pager="true" [options]="slideOpts">
+                <ion-slide *ngFor="let item of photos">
+                  <img class="img-post" src="{{item}}" alt="">
+                </ion-slide>
+              </ion-slides>
+            </div>
+            <div *ngIf="photos.length === 0" (click)="presentActionSheet()">
+              <ion-icon class="icon" name="images"></ion-icon>
+              <h6 class="ion-text-center text-icon">Images</h6>
+            </div>
+            <div *ngIf="photos.length > 0">
+              <ion-button (click)="presentActionSheet()" size="small" color="primary">Add <ion-icon name="add"></ion-icon> </ion-button>
+            </div>
+            <br>
+            <div>
+              <ion-textarea rows="7" cols="20" placeholder="Add a description"></ion-textarea>
+            </div>
+            <div>
+              <ion-button class="ion-float-right button-send" color="primary-bl" shape="round">
+                <ion-icon class="icon-send" name="send"></ion-icon>
+              </ion-button>
+            </div>
           </ion-col>
         </ion-row>
       </ion-col>
