--- a/beauty-app/src/app/pages/new-post/new-post.page.scss
+++ b/beauty-app/src/app/pages/new-post/new-post.page.scss
@@ -1,11 +1,32 @@
-h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    ion-label {
+.icon-send{
+    font-size: 30px;
+}
+.button-send{
+    height: 45px
+}
+.img-post{
+    height: 450px;
+    display: flex;
+    margin: 0 auto;
+    border-radius: 14px;
+    border: aliceblue 1px solid;
+}
+ion-textarea{
+    background: aliceblue;
+    border-radius: 10px;
+    border: #ba79ff 1px solid;
+    color: #5863a2;
+}
+.text-icon{
+    margin-top: -1rem;
+}
+.icon{
+    color: aliceblue;
+    display: flex;
+    margin: 0 auto;
+    font-size: 170px;
+}
+h1,h2,h3,h4,h5,h6,p,ion-label {
         color: white;
     }
 .input {
