--- a/beauty-app/src/app/pages/admprocedures/admprocedures.page.html
+++ b/beauty-app/src/app/pages/admprocedures/admprocedures.page.html
@@ -58,4 +58,13 @@
     </ion-row>
   </ion-grid>
   
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="2" size-lg="2" size-md="2"></ion-col>
+      <ion-col size="8" size-lg="8" size-md="8">
+        <img src="../../../assets/img/horizontal_logo.png" alt="" class="img-admin">
+      </ion-col>
+      <ion-col size="2" size-lg="2" size-md="8"></ion-col>
+    </ion-row>
+    </ion-grid>
 </ion-content>
