--- a/beauty-app/src/app/pages/admrooms/admrooms.page.html
+++ b/beauty-app/src/app/pages/admrooms/admrooms.page.html
@@ -54,5 +54,15 @@
       <ion-col size="12" size-md="3" size-xl="3"></ion-col>
     </ion-row>
   </ion-grid>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="2" size-lg="2" size-md="2"></ion-col>
+      <ion-col size="8" size-lg="8" size-md="8">
+        <img src="../../../assets/img/horizontal_logo.png" alt="" class="img-admin">
+      </ion-col>
+      <ion-col size="2" size-lg="2" size-md="8"></ion-col>
+    </ion-row>
+    </ion-grid>
 </ion-content>
   
