--- a/beauty-app/src/app/pages/admprocedures/admprocedures.page.html
+++ b/beauty-app/src/app/pages/admprocedures/admprocedures.page.html
@@ -21,38 +21,36 @@
     <ion-row>
       <ion-col size="12" size-md="3" size-xl="3"></ion-col>
       <ion-col size="12" size-md="6" size-xl="6">
+        <form (ngSubmit)="saveProcedures()">
           <ion-list lines="full" class="ion-no-margin ion-no-padding">
             <ion-item>
               <ion-input placeholder="Procedure Name" type="text" name="nombre" 
-                class="input-contact"></ion-input>
-                <div class="invalid-feedback">
-                 <!-- <div>name is required</div>-->
-              </div>                
+                class="input-contact" required [(ngModel)]="procedures.nombre">
+              </ion-input>
             </ion-item>
             <ion-item>
-              <ion-input placeholder="Description Procedure"  type="text" name="descripcion" class="input-contact"></ion-input>
+              <ion-input placeholder="Description Procedure"  type="text" 
+                name="descripcion" class="input-contact" required [(ngModel)]="procedures.descripcion">
+              </ion-input>
             </ion-item>
             <ion-item>
-              <ion-input placeholder="Procedure Value" type="text" name="valor" class="input-contact"></ion-input>
+              <ion-input placeholder="Procedure Value" type="text" 
+                name="valor" class="input-contact" required [(ngModel)]="procedures.precio">
+              </ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label position="stacked" color='primary'>Room Type:</ion-label>
-              <select name="idDepartamento"  class="form-control">
-                <option ></option>
-              </select> 
-            </ion-item>
-            <ion-input color="primary" type='file'>
-              
+            <ion-input color="primary" type='file' name="imagen" 
+              required [(ngModel)]="procedures.imagen">
             </ion-input>
             <ion-row class="btn-style">
               <ion-col size="6">
-              <ion-button color="dark" class="btn-save"expand="full" size="large">Save</ion-button>
+              <ion-button color="dark" class="btn-save" expand="full" size="large" type="submit">Save</ion-button>
             </ion-col>
             <ion-col size="6">
               <ion-button color="dark" expand="full" size="large" class="btn-details" routerLink="/admplansdetails">Details</ion-button>
             </ion-col>
             </ion-row>
           </ion-list>
+        </form>
       </ion-col>
       <ion-col size="12" size-md="3" size-xl="3"></ion-col>
     </ion-row>
