--- a/beauty-app/src/app/pages/new-post/new-post.page.html
+++ b/beauty-app/src/app/pages/new-post/new-post.page.html
@@ -6,29 +6,46 @@
         <ion-row>
           <ion-col size="12">
             <div *ngIf="photos.length === 1">
-              <img class="img-post" src="{{photos[0]}}" alt="">
+              <ion-row>
+                <ion-col size="6">
+                    <ion-icon (click)="deletePhoto(0)" name="trash" class="trash-icon"></ion-icon>
+                </ion-col>
+                <ion-col size="12">
+                  <img class="img-post" [src]="photos[0]" alt="">             
+                </ion-col>
+              </ion-row> 
             </div>
             <div *ngIf="photos.length > 1">
               <ion-slides pager="true" [options]="slideOpts">
-                <ion-slide *ngFor="let item of photos">
-                  <img class="img-post" src="{{item}}" alt="">
+                <ion-slide *ngFor="let item of photos; let i = index;">
+                  <ion-row>
+                    <ion-col size="6">
+                        <ion-icon (click)="deletePhoto(i)" name="trash" class="trash-icon"></ion-icon>
+                    </ion-col>
+                    <ion-col size="12">
+                      <img class="img-post" [src]="item" alt="">             
+                    </ion-col>
+                  </ion-row>                  
                 </ion-slide>
               </ion-slides>
             </div>
             <div *ngIf="photos.length === 0" (click)="presentActionSheet()">
               <ion-icon class="icon" name="images"></ion-icon>
-              <h6 class="ion-text-center text-icon">Images</h6>
+              <h6 class="ion-text-center text-icon">Images <ion-icon name="add"></ion-icon> </h6>
             </div>
-            <div *ngIf="photos.length > 0">
-              <ion-button (click)="presentActionSheet()" size="small" color="primary">Add <ion-icon name="add"></ion-icon> </ion-button>
+            <div *ngIf="photos.length > 0" class="content-btn">
+              <ion-button (click)="presentActionSheet()" class="button-add">
+                Add Picture <ion-icon name="add"></ion-icon>
+              </ion-button>
             </div>
             <br>
             <div>
               <ion-textarea rows="7" cols="20" placeholder="Add a description"></ion-textarea>
             </div>
-            <div>
-              <ion-button class="ion-float-right button-send" color="primary-bl" shape="round">
-                <ion-icon class="icon-send" name="send"></ion-icon>
+            <div class="content-btn">
+              <br>
+              <ion-button color="primary-bl" (click)="publish()" class="center" shape="round">
+                Publish <ion-icon  name="add"></ion-icon>
               </ion-button>
             </div>
           </ion-col>
