--- a/beauty-app/src/app/pages/new-post/new-post.page.scss
+++ b/beauty-app/src/app/pages/new-post/new-post.page.scss
@@ -1,3 +1,30 @@
+.center{
+    display: flex;
+    margin: 0 auto;
+}
+.content-btn{
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.button-add{
+    --background: transparent;
+    --box-shadow: transparent;
+    border: aliceblue 1px solid;
+    border-radius: 12px;
+    display: flex;
+    margin: 0 auto;
+}
+.trash-icon{
+    float: left;
+    font-size: 26px;
+    padding-left: 1.5rem;
+    color: aliceblue;
+    position: absolute;
+    top: 23px;
+    z-index: 1;
+    left: 2px;
+    cursor: pointer;
+}
 .icon-send{
     font-size: 30px;
 }
@@ -5,7 +32,6 @@
     height: 45px
 }
 .img-post{
-    height: 450px;
     display: flex;
     margin: 0 auto;
     border-radius: 14px;
