--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -70,9 +70,17 @@
         </ion-row>
     </ion-grid>
 
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button color="primary-bl" routerLink="/new-post">
+    <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+        <ion-fab-button color="primary-bl">
             <ion-icon name="add"></ion-icon>
         </ion-fab-button>
+        <ion-fab-list side="top">
+            <ion-fab-button (click)="goToNewPost('gallery')" color="primary">
+                <ion-icon class="icon-c-g" name="images"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button (click)="goToNewPost('camera')" color="primary">
+                <ion-icon class="icon-c-g" name="camera"></ion-icon>
+            </ion-fab-button>
+        </ion-fab-list>
     </ion-fab>
 </ion-content>
