--- a/beauty-app/src/app/pages/social/social.page.scss
+++ b/beauty-app/src/app/pages/social/social.page.scss
@@ -1,3 +1,11 @@
+.icon-c-g{
+        color: aliceblue;
+        font-size: 25px;
+}
+.button-opt{
+        width: 88%;
+        height: 45px;
+}
 ion-card{
         border-radius: 0;
 }
@@ -12,7 +20,6 @@ ion-card{
         width: 550px;
         height: 350px;
 }
-
 .card-social{
         --background:white;
         margin-inline-end: -10px;
