--- a/beauty-app/src/app/pages/share/share.page.html
+++ b/beauty-app/src/app/pages/share/share.page.html
@@ -1,9 +1,12 @@
 <app-header titulo="BeautyLab Share"></app-header>
 
 <ion-content>
+  <ion-label class="ion-text-center" color="light">Your Image</ion-label>
+  <br><hr>
   <img [src]="currentImage" *ngIf="currentImage" alt="">
-  
-  <ion-button expand="full" (click)="loadimage()">Load your Image</ion-button>
-  <ion-button expand="full" (click)="shareimage()">Share on Instagram</ion-button>
+  <br>
+  <ion-button expand="full" (click)="loadimage()" color="success">Load your Image</ion-button>
+  <ion-button expand="full" (click)="shareimage()" color="danger">Share on Instagram</ion-button>
+  <ion-button expand="full" (click)="shareFacebook()">Share on Facebook</ion-button>
   
 </ion-content>
