--- a/beauty-app/src/app/pages/plans/plans.page.html
+++ b/beauty-app/src/app/pages/plans/plans.page.html
@@ -20,11 +20,11 @@
     <ion-row *ngFor="let data of plans" (click)="getDetail(data)">
         <ion-col size="12" size-lg="3" size-md="4" size-xl="3"></ion-col>
         <ion-col size="12" size-lg="6" size-md="4" size-xl="6">
-            <ion-card color="light">
+            <ion-card>
                 <img src="assets/img/pyp/{{data.img_plan}}" class="plans">
                 <ion-card-header>
                   <ion-card-subtitle></ion-card-subtitle>
-                  <ion-card-title class="ion-text-center">{{data.nombre}}</ion-card-title>
+                  <ion-card-title class="ion-text-center" color="light">{{data.nombre}}</ion-card-title>
                 </ion-card-header>
               </ion-card>
         </ion-col>
