--- a/beauty-app/src/app/pages/share/share.page.html
+++ b/beauty-app/src/app/pages/share/share.page.html
@@ -6,7 +6,8 @@
   <img [src]="currentImage" *ngIf="currentImage" alt="">
   <br>
   <ion-button expand="full" (click)="loadimage()" color="success">Load your Image</ion-button>
-  <ion-button expand="full" (click)="shareimage()" color="danger">Share on Instagram</ion-button>
-  <ion-button expand="full" (click)="shareFacebook()">Share on Facebook</ion-button>
-  
+  <ion-button expand="full" (click)="shareInstagram()" color="danger"><ion-icon name="logo-instagram" size="large"></ion-icon> Share on Instagram  
+  </ion-button>
+  <ion-button expand="full" (click)="shareFacebook()"><ion-icon name="logo-facebook" size="large"></ion-icon> Share on Facebook </ion-button>
+  <ion-button expand="full" (click)="shareTwitter()"><ion-icon name="logo-twitter" size="large"></ion-icon> Share on Twitter </ion-button>
 </ion-content>
