--- a/beauty-app/src/app/pages/new-post/new-post.page.html
+++ b/beauty-app/src/app/pages/new-post/new-post.page.html
@@ -40,7 +40,7 @@
             </div>
             <br>
             <div>
-              <ion-textarea rows="7" cols="20" placeholder="Add a description"></ion-textarea>
+              <ion-textarea [(ngModel)]="data.descripcion" rows="7" cols="20" placeholder="Add a description"></ion-textarea>
             </div>
             <div class="content-btn">
               <br>
