--- a/beauty-app/src/app/pages/new-post/new-post.page.scss
+++ b/beauty-app/src/app/pages/new-post/new-post.page.scss
@@ -1,3 +1,7 @@
+ion-slides{
+    --bullet-background:grey;
+    --bullet-background-active:rgb(255, 0, 221);
+}
 .center{
     display: flex;
     margin: 0 auto;
