--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -11,7 +11,7 @@
     </ion-slides>
     
     <h3 class="ion-text-center">P L A N S</h3>
-    <ion-slides style="padding-bottom: 30px" pager="true" [options]="slideOpts" class="pos-btn-slides-2">
+    <ion-slides style="padding-bottom: 30px" pager="false" [options]="slideOpts" class="pos-btn-slides-2">
         <ion-slide *ngFor="let item of plans">
             <img src="assets/img/pyp/{{item}}" class="img-plan"  alt="picture" routerLink="/plans">
         </ion-slide>
