--- a/beauty-app/src/app/pages/homeapp/homeapp.page.scss
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.scss
@@ -6,7 +6,7 @@ ion-slides{
     --bullet-background-active:#FFF;
 }
 h3{
-    margin: 0.3rem;
+    margin: 0;
     font-family: 'suissnordregular';
 }
 .padding{
@@ -20,6 +20,7 @@ h3{
     border-radius: 1.5rem;
     margin: 0 auto;
     text-align : center;
+    height: 75px;
 }
 .pos-btn-slides{
     position: relative;
