--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -16,6 +16,7 @@
             <img src="assets/img/pyp/{{item}}" class="img-plan"  alt="picture" routerLink="/plans">
         </ion-slide>
     </ion-slides>
+    <!--borrar--><ion-button routerLink="/medicform">FORMULARIO MEDICO TEMP</ion-button><!--borrar-->
     <h3 class="ion-text-center">P R O C E D U R E S</h3>
     <!-- <ion-slides pager="true" [options]="slideOpts"> -->
     <ion-grid fixed class="center">
