--- a/beauty-app/src/global.scss
+++ b/beauty-app/src/global.scss
@@ -31,15 +31,15 @@ ion-content.background-bl {
   //--background:#000;
   //--background: linear-gradient(to bottom, rgba(232,148,232,1) 0%, rgba(19,19,19,1) 100%);
   --background: rgb(3,99,193);
-  // --background: linear-gradient(180deg, rgba(3,99,193,1) 0%, rgba(127,94,209,1) 95%, rgba(186,121,255,1) 100%); 
-  --background: linear-gradient(180deg, rgb(89, 171, 252) -10%, rgb(225, 80, 255) 59%, rgba(89, 171, 252, 1) 100%);
+  --background: linear-gradient(180deg, rgba(3,99,193,1) 0%, rgba(127,94,209,1) 95%, rgba(186,121,255,1) 100%); 
+  // --background: linear-gradient(180deg, rgb(89, 171, 252) -10%, rgb(225, 80, 255) 59%, rgba(89, 171, 252, 1) 100%);
 }
 
 ion-content{
   //--background: linear-gradient(180deg, rgb(174, 25, 255) 0%, rgb(43, 58, 221) 90%, rgb(74, 68, 197) 100%);
   --background: rgb(3,99,193);
-  // --background: linear-gradient(180deg, rgba(3,99,193,1) 0%, rgba(127,94,209,1) 95%, rgba(186,121,255,1) 100%); 
-  --background: linear-gradient(180deg, rgb(89, 171, 252) -10%, rgb(225, 80, 255) 59%, rgba(89, 171, 252, 1) 100%);
+  --background: linear-gradient(180deg, rgba(3,99,193,1) 0%, rgba(127,94,209,1) 95%, rgba(186,121,255,1) 100%); 
+  // --background: linear-gradient(180deg, rgb(89, 171, 252) -10%, rgb(225, 80, 255) 59%, rgba(89, 171, 252, 1) 100%);
 
 }
 
