--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -11,12 +11,11 @@
     </ion-slides>
     
     <h3 class="ion-text-center">P L A N S</h3>
-    <ion-slides style="padding-bottom: 30px" pager="false" [options]="slideOpts" class="pos-btn-slides-2">
+    <ion-slides style="padding-bottom: 24px" pager="true" [options]="slideOpts" class="pos-btn-slides-2">
         <ion-slide *ngFor="let item of plans">
             <img src="assets/img/pyp/{{item}}" class="img-plan"  alt="picture" routerLink="/plans">
         </ion-slide>
     </ion-slides>
-    <!--borrar--><ion-button routerLink="/medicform">FORMULARIO MEDICO TEMP</ion-button><!--borrar-->
     <h3 class="ion-text-center">P R O C E D U R E S</h3>
     <!-- <ion-slides pager="true" [options]="slideOpts"> -->
     <ion-grid fixed class="center">
