--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -3,7 +3,7 @@
 <ion-content class="background-bl ion-padding">
     <ion-slides style="padding-bottom: 30px" pager="true" [options]="slideOpts">
         <ion-slide>
-            <img (click)="watch('Ldi5QLHKm_U')" class="img-hd" src="assets/img/Video-Tour.png" alt="picture">
+            <img (click)="watch('Ldi5QLHKm_U')" class="img-hd" src="assets/img/pyp/minvid.png" alt="picture">
         </ion-slide>
         <ion-slide>
             <img class="img-hd" src="assets/img/confidence.png" alt="picture">
@@ -16,7 +16,6 @@
             <img src="assets/img/pyp/{{item}}" class="img-plan"  alt="picture" routerLink="/plans">
         </ion-slide>
     </ion-slides>
-    <!--borrar--><ion-button routerLink="/medicform">FORMULARIO MEDICO TEMP</ion-button><!--borrar-->
     <h3 class="ion-text-center">P R O C E D U R E S</h3>
     <!-- <ion-slides pager="true" [options]="slideOpts"> -->
     <ion-grid fixed class="center">
