--- a/beauty-app/src/app/pages/social/social.page.scss
+++ b/beauty-app/src/app/pages/social/social.page.scss
@@ -33,10 +33,10 @@ ion-card{
 }
 
 .postage{
-        color: #86898C;
+        color: darkgray;
         position: relative;
         bottom: 36px;
-        font-size: 16px;
+        font-size: 12px;
 }
 .icon-more{
         width: 28px;
