--- a/beauty-app/src/app/pages/homeapp/homeapp.page.scss
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.scss
@@ -1,3 +1,12 @@
+.swiper-pagination-bullet {
+    --border: aliceblue 2px solid !important;
+    --width: 9px;
+    --height: 9px;
+    --display: inline-block;
+    --border-radius: 100%;
+    --background: #000;
+    --opacity: .2;
+}
 ion-content{
     --color:#fff;
 }
