--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -17,14 +17,14 @@
                             <ion-row>
                                 <ion-col size="2">
                                     <ion-avatar class="avatar-social">
-                                        <img src="../../../assets/img/{{post.profileimg}}">
+                                        <img src="{{hero.getDomain()}}/file/profile/user_avatar1583174188.jpeg">
                                     </ion-avatar>
                                 </ion-col>
 
                                 <ion-col size="9">
-                                    <h2 class="social-name">{{post.user}}</h2>
+                                    <h2 class="social-name">John Doe</h2>
 
-                                    <h3 class="postage">Posted {{post.postage}}</h3>
+                                    <h5 class="postage">Posted {{post.fecha}} / {{post.hora}}</h5>
                                 </ion-col>
 
                                 <ion-col size="1">
@@ -38,20 +38,26 @@
                     <ion-card-content class="padding-fix">
                         <ion-grid class="padding-fix">
                             <ion-row>
-                                <img class="img-post" src="../../../assets/img/{{post.images}}">
 
-                                <ion-col size="2">
+                                <ion-slides *ngIf="post.images.length > 1" pager="true" [options]="slideOpts">
+                                    <ion-slide *ngFor="let image of post.images">
+                                        <img class="img-post" [src]="hero.getDomain()+'/file/blog/'+image.imagen">
+                                    </ion-slide>
+                                </ion-slides>
+                                <img *ngIf="post.images.length === 1" class="img-post" [src]="hero.getDomain()+'/file/blog/'+post.images[0].imagen">
+
+                                <!-- <ion-col size="2">
                                     <ion-col (click)="likeFocus(i)">
                                         <img class="likeicon" src="/assets/icon/like.svg" *ngIf="!post.like">
 
                                         <img class="likeicon" src="/assets/icon/likeFocus.svg" *ngIf="post.like">
                                     </ion-col>
 
-                                    <h1 class="likes ion-text-center">{{post.nlikes}}</h1>
-                                </ion-col>
+                                    <h1 class="likes ion-text-center">{{post.likes}}</h1>
+                                </ion-col> -->
 
                                 <ion-col size="10">
-                                    <h1 class="tinytext">{{post.postext}}</h1>
+                                    <h1 class="tinytext">{{post.descripcion}}</h1>
                                 </ion-col>
 
                                 <ion-col size="12">
