--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -15,12 +15,12 @@
                             <ion-row>
                                 <ion-col size="2">
                                     <ion-avatar class="avatar-social">
-                                        <img src="{{hero.getDomain()}}/file/profile/user_avatar1583174188.jpeg">
+                                        <img src="{{hero.getDomain()}}/file/profile/{{post.user.img_perfil}}">
                                     </ion-avatar>
                                 </ion-col>
 
                                 <ion-col size="9">
-                                    <h2 class="social-name">John Doe</h2>
+                                    <h2 class="social-name">{{post.user.nombres}}</h2>
 
                                     <h5 class="postage">Posted {{post.fecha}} / {{post.hora}}</h5>
                                 </ion-col>
@@ -38,22 +38,19 @@
                             <ion-row>
                                 <ion-slides *ngIf="post.images.length > 1" pager="true" [options]="slideOpts">
                                     <ion-slide *ngFor="let image of post.images">
-                                        <img class="img-post" [src]="hero.getDomain()+'/file/blog/'+image.imagen">
+                                        <img [src]="hero.getDomain()+'/file/blog/'+image.imagen">
                                     </ion-slide>
                                 </ion-slides>
-                                <img *ngIf="post.images.length === 1" class="img-post"
+                                <img *ngIf="post.images.length === 1"
                                     [src]="hero.getDomain()+'/file/blog/'+post.images[0].imagen">
-
-                                <ion-col size="2">
+                                <!-- <ion-col size="2">
                                     <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/like.svg"
                                         *ngIf="!post.like">
-
                                     <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/likeFocus.svg"
                                         *ngIf="post.like">
                                     <br>
-
                                     <h1 class="likes ion-text-center">{{post.likes}}</h1>
-                                </ion-col>
+                                </ion-col> -->
                                 <ion-col size="10">
                                     <h1 class="tinytext">
                                         {{post.descripcion}}</h1>
