--- a/beauty-app/src/app/pages/medicform/medicform.page.scss
+++ b/beauty-app/src/app/pages/medicform/medicform.page.scss
@@ -3,3 +3,14 @@
     margin: 0 auto;
     display: block;
 }
+.form-title{
+    color:gray;
+    font-size: 15px;
+}
+.title-input{
+    position: relative;
+    left: 50px;
+}
+.title-check{
+    font-size: 10px;
+}
