--- a/beauty-app/src/app/pages/profile/profile.page.html
+++ b/beauty-app/src/app/pages/profile/profile.page.html
@@ -52,7 +52,7 @@
       <ion-fab-button color="primary-bl" size="large" routerLink="/data-complete">
         <ion-icon name="create"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button color="light" size="large" routerLink="/medicalinfo">
+      <ion-fab-button color="light" size="large" routerLink="/medicform">
         <ion-icon name="medkit" color="primary"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
