--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -22,7 +22,7 @@
                                 <ion-col size="9">
                                     <h2 class="social-name">{{post.user.nombres}}</h2>
 
-                                    <h5 class="postage">Posted {{post.fecha}} / {{post.hora}}</h5>
+                                    <h5 class="postage">Posted {{post.fecha}}</h5>
                                 </ion-col>
 
                                 <ion-col size="1">
