--- a/beauty-app/src/app/pages/admprocedures/admprocedures.page.html
+++ b/beauty-app/src/app/pages/admprocedures/admprocedures.page.html
@@ -46,7 +46,7 @@
               <ion-button color="dark" class="btn-save" expand="full" size="large" type="submit">Save</ion-button>
             </ion-col>
             <ion-col size="6">
-              <ion-button color="dark" expand="full" size="large" class="btn-details" routerLink="/admplansdetails">Details</ion-button>
+              <ion-button color="dark" expand="full" size="large" class="btn-details" routerLink="/admproceduresdetails">Details</ion-button>
             </ion-col>
             </ion-row>
           </ion-list>
