--- a/beauty-app/src/app/pages/admrooms/admrooms.page.html
+++ b/beauty-app/src/app/pages/admrooms/admrooms.page.html
@@ -38,8 +38,8 @@
             <ion-item>
               <ion-label position="stacked">Room Type:</ion-label>
               <ion-select name="idRoomType" class="form-control"
-                [(ngModel)]="rooms.roomsType.idTipoHabitacion" >
-                  <ion-select-option *ngFor="let item of roomsTypeList" value={{item.idTipoHabitacion}}>{{item.nombre}}</ion-select-option>
+                [(ngModel)]="rooms.id_tipo_habitacion">
+                  <ion-select-option *ngFor="let item of roomsTypeList" value={{item.id_tipo_habitacion}}>{{item.id_tipo_habitacion + '-' + item.nombre}}</ion-select-option>
               </ion-select>
             </ion-item>
             <ion-item>
