--- a/beauty-app/src/app/pages/admroomsdetails/admroomsdetails.page.html
+++ b/beauty-app/src/app/pages/admroomsdetails/admroomsdetails.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Details Room</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button text="Back" defaultHref="/homeadmin"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Beauty Lab Detail Rooms</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,15 +14,17 @@
       <ion-col size="12" size-md="6" size-xl="6">
         <ion-list lines="full" class="ion-no-margin ion-no-padding">
           <ion-item>
-            <ion-label position="" class="txt-label">Room Name (vip)</ion-label>
-            <ion-label position="">Description Room (good bed extra large)</ion-label>
-            <ion-button><ion-icon name="create" color="dark"></ion-icon></ion-button>
-            <ion-button><ion-icon name="close-circle-outline" color="dark"></ion-icon></ion-button>
+            <ion-label position="" class="txt-label">Room Name</ion-label>
+            <ion-label position="">Comfort Room</ion-label>
           </ion-item>
+          <ion-item *ngFor="let data of rooms" >
+            <ion-label position="" class="txt-label">{{data.nombre}}</ion-label>
+            <ion-label position="">{{data.comodidades}}</ion-label>
+            <ion-button><ion-icon name="close-circle-outline" color="dark"></ion-icon></ion-button>
+          </ion-item>          
         </ion-list>
       </ion-col>
       <ion-col size="12" size-md="3" size-xl="3"></ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
-
