--- a/beauty-app/src/app/pages/admreservas/admreservas.page.html
+++ b/beauty-app/src/app/pages/admreservas/admreservas.page.html
@@ -14,29 +14,19 @@
     Reservations
   </ion-list-header>
 
-  <ion-item>
+  <ion-item *ngFor="let data of reservations" >
     <ion-avatar slot="start">
       <img src="./../../../assets/img/PROFILEPICTURE.png">
     </ion-avatar>
     <ion-label>
-      <h2>Emily Rose</h2>
-      <h3>Super Model Plan</h3>
-      <p>Date: 2020-05-10</p>
+      <h2>{{data.nombres + " " + data.apellidos}}</h2>
+      <h3 *ngIf="data.plan" >Plan: {{data.plan}}</h3>
+      <h3 *ngIf="data.procedimiento" >Procedure: {{data.procedimiento}}</h3>
+      <p>Date: {{data.fecha_reserva | date:"dd-MM-yyyy" }}</p>
       <ion-button color="dark">Details</ion-button>
     </ion-label>
   </ion-item>
 
-  <ion-item>
-    <ion-avatar slot="start">
-      <img src="./../../../assets/img/PROFILEPICTURE.png">
-    </ion-avatar>
-    <ion-label>
-      <h2>Carla Rose</h2>
-      <h3>Booty Plan</h3>
-      <p>Date: 2020-06-10</p>
-      <ion-button color="dark">Details</ion-button>
-    </ion-label>
-  </ion-item>
 </ion-list>
 
 
