--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 
-<ion-content>
+<ion-content 
+[scrollEvents]="true"
+(ionScrollStart)="logScrollStart()">
     <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
         <ion-refresher-content pullingIcon="arrow-up" refreshingSpinner="circles">
         </ion-refresher-content>
@@ -56,15 +58,18 @@
                                         {{post.descripcion}}</h1>
                                 </ion-col>
                                 <ion-col *ngIf="post.comments.length > 0" size="12" class="box-comm">
-                                    <p *ngFor="let comm of post.comments"> <b>{{comm.user.nombres}}</b> {{comm.comentario}}</p>
+                                    <p *ngFor="let comm of post.comments"> <b>{{comm.user.nombres}}</b>
+                                        {{comm.comentario}}</p>
                                 </ion-col>
                                 <ion-col size="12">
                                     <div>
                                         <ion-item class="line-up">
-                                            <ion-input placeholder="Add Comment" [(ngModel)]="this.cards[i].comment"></ion-input>
+                                            <ion-input placeholder="Add Comment" [(ngModel)]="this.cards[i].comment">
+                                            </ion-input>
 
                                             <ion-button fill="clear" expand="full">
-                                                <ion-text color="primary-bl" slot="end" (click)="comment(i)">Comment</ion-text>
+                                                <ion-text color="primary-bl" slot="end" (click)="comment(i)">Comment
+                                                </ion-text>
                                             </ion-button>
                                         </ion-item>
                                     </div>
@@ -76,7 +81,11 @@
             </ion-col>
         </ion-row>
     </ion-grid>
-
+    <ion-fab *ngIf="toper" horizontal="start" vertical="bottom" slot="fixed">
+        <ion-fab-button size="small" (click)="ScrollToTop()" color="primary">
+            <ion-icon name="arrow-up"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
     <ion-fab horizontal="end" vertical="bottom" slot="fixed">
         <ion-fab-button color="primary-bl">
             <ion-icon name="add"></ion-icon>
