--- a/beauty-app/src/app/pages/new-post/new-post.page.scss
+++ b/beauty-app/src/app/pages/new-post/new-post.page.scss
@@ -2,6 +2,9 @@ ion-slides{
     --bullet-background:grey;
     --bullet-background-active:rgb(255, 0, 221);
 }
+.mar-top{
+    margin-top: 3.5rem !important;
+}
 .center{
     display: flex;
     margin: 0 auto;
