--- a/beauty-app/src/app/pages/new-post/new-post.page.html
+++ b/beauty-app/src/app/pages/new-post/new-post.page.html
@@ -1,55 +1,59 @@
 <ion-content>
+  <div *ngIf="loading" class="mar-top loading center">
+    <div class="ldio-0crlo2y4m0zh">
+      <div></div>
+      <div></div>
+    </div>
+  </div>
   <ion-grid>
     <ion-row>
       <ion-col size="0" size-md="2" size-md="4"></ion-col>
-      <ion-col size="12" size-md="8" size-md="4">
-        <ion-row>
-          <ion-col size="12">
-            <div *ngIf="photos.length === 1">
+      <ion-col *ngIf="!loading" size="12" size-md="8" size-md="4">
+        <div *ngIf="photos.length === 1">
+          <ion-row>
+            <ion-col size="6">
+              <ion-icon (click)="deletePhoto(0)" name="trash" class="trash-icon"></ion-icon>
+            </ion-col>
+            <ion-col size="12">
+              <img class="img-post" [src]="photos[0]" alt="">
+            </ion-col>
+          </ion-row>
+        </div>
+        <div *ngIf="photos.length > 1">
+          <ion-slides pager="true" [options]="slideOpts">
+            <ion-slide *ngFor="let item of photos; let i = index;">
               <ion-row>
                 <ion-col size="6">
-                    <ion-icon (click)="deletePhoto(0)" name="trash" class="trash-icon"></ion-icon>
+                  <ion-icon (click)="deletePhoto(i)" name="trash" class="trash-icon"></ion-icon>
                 </ion-col>
                 <ion-col size="12">
-                  <img class="img-post" [src]="photos[0]" alt="">             
+                  <img class="img-post" [src]="item" alt="">
                 </ion-col>
-              </ion-row> 
-            </div>
-            <div *ngIf="photos.length > 1">
-              <ion-slides pager="true" [options]="slideOpts">
-                <ion-slide *ngFor="let item of photos; let i = index;">
-                  <ion-row>
-                    <ion-col size="6">
-                        <ion-icon (click)="deletePhoto(i)" name="trash" class="trash-icon"></ion-icon>
-                    </ion-col>
-                    <ion-col size="12">
-                      <img class="img-post" [src]="item" alt="">             
-                    </ion-col>
-                  </ion-row>                  
-                </ion-slide>
-              </ion-slides>
-            </div>
-            <div *ngIf="photos.length === 0" (click)="presentActionSheet()">
-              <ion-icon class="icon" name="images"></ion-icon>
-              <h6 class="ion-text-center text-icon">Images <ion-icon name="add"></ion-icon> </h6>
-            </div>
-            <div *ngIf="photos.length > 0" class="content-btn">
-              <ion-button (click)="presentActionSheet()" class="button-add">
-                Add Picture <ion-icon name="add"></ion-icon>
-              </ion-button>
-            </div>
-            <br>
-            <div>
-              <ion-textarea [(ngModel)]="data.descripcion" rows="7" cols="20" placeholder="Add a description"></ion-textarea>
-            </div>
-            <div class="content-btn">
-              <br>
-              <ion-button color="primary-bl" (click)="publish()" class="center" shape="round">
-                Publish <ion-icon  name="add"></ion-icon>
-              </ion-button>
-            </div>
-          </ion-col>
-        </ion-row>
+              </ion-row>
+            </ion-slide>
+          </ion-slides>
+        </div>
+        <div *ngIf="photos.length === 0" (click)="presentActionSheet()">
+          <ion-icon class="icon" name="images"></ion-icon>
+          <h6 class="ion-text-center text-icon">Images <ion-icon name="add"></ion-icon>
+          </h6>
+        </div>
+        <div *ngIf="photos.length > 0" class="content-btn">
+          <ion-button (click)="presentActionSheet()" class="button-add">
+            Add Picture <ion-icon name="add"></ion-icon>
+          </ion-button>
+        </div>
+        <br>
+        <div>
+          <ion-textarea [(ngModel)]="data.descripcion" rows="7" cols="20" placeholder="Add a description">
+          </ion-textarea>
+        </div>
+        <div class="content-btn">
+          <br>
+          <ion-button color="primary-bl" (click)="publish()" class="center" shape="round">
+            Publish <ion-icon name="add"></ion-icon>
+          </ion-button>
+        </div>
       </ion-col>
       <ion-col size="0" size-md="2" size-md="4"></ion-col>
     </ion-row>
