img - Arreglo Formulario medico

--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -31,8 +31,14 @@
         <ion-slide *ngFor="let item of touristic" class="pos-btn-slides" >
             <ion-grid>
                 <ion-row>
-                    <ion-col style="padding-bottom: 15px" size="4" *ngFor="let tur of item.items" >
-                        <img src="assets/img/TOURISTICPLAN{{tur}}.png"alt="service">
+                    <ion-col style="padding-bottom: 15px" size="4">
+                        <img class="img-tour2"src="assets/img/Arvi.jpg"alt="service">
+                    </ion-col>
+                    <ion-col style="padding-bottom: 15px" size="4">
+                        <img src="assets/img/Fat-tour.jpg" class="img-tour" alt="service">
+                    </ion-col>
+                    <ion-col style="padding-bottom: 15px" size="4">
+                        <img src="assets/img/Penol-tour.jpg"alt="service">
                     </ion-col>
                 </ion-row>
             </ion-grid>
