--- a/beauty-app/src/app/pages/medicform/medicform.page.scss
+++ b/beauty-app/src/app/pages/medicform/medicform.page.scss
@@ -9,8 +9,25 @@
 }
 .title-input{
     position: relative;
-    left: 50px;
+    text-indent: 1rem;
+    font-size: 16px;
 }
 .title-check{
-    font-size: 10px;
+    font-size: 15px;
+}
+.btn-save{
+    width: 174px;
+    display: block;
+    position: relative;
+    margin: auto;
+    bottom: 26px;
+}
+
+.grid-qst{
+    padding-bottom: 3rem;
+    padding-top: 2rem;
+}   
+.grid-input{
+    padding-bottom: 3rem;
+    padding-top: 2rem;  
 }
