--- a/beauty-app/src/app/pages/procedures/procedures.page.html
+++ b/beauty-app/src/app/pages/procedures/procedures.page.html
@@ -18,7 +18,7 @@
     <ion-grid fixed>
         <ion-row *ngIf="procedures">
             <ion-col size="6" size-lg="4" size-md="4" size-xl="4" *ngFor="let data of procedures" (click)="getDetail(data)">
-                <img src="./assets/img/pyp/{{data.imagen}}" class="plans">
+                <img [src]="hero.getDomain()+'/file/procedures/'+data.imagen" class="procedures">
                 <ion-text color="light" ><h4 class="ion-text-center txtProc">{{data.nombre}}</h4></ion-text>
             </ion-col>  
         </ion-row>
