--- a/beauty-app/src/app/pages/s-room/s-room.page.html
+++ b/beauty-app/src/app/pages/s-room/s-room.page.html
@@ -12,7 +12,7 @@
                 <ion-radio color="light" slot="end" [value]="ind"></ion-radio>
               </ion-item>
               <div>
-                <img class="scroll-fix" (click)="onPress(item.imagen)" class="img-room" src="{{hero.getDomain()}}/file/{{item.imagen}}" alt="">
+                <img class="scroll-fix" (click)="onPress(item.imagen)" class="img-room" src="{{hero.getDomain()}}/file/rooms/{{item.imagen}}" alt="">
               </div>
             </div>
           </ion-radio-group> 
