--- a/beauty-app/src/app/pages/homeapp/homeapp.page.html
+++ b/beauty-app/src/app/pages/homeapp/homeapp.page.html
@@ -32,7 +32,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-col style="padding-bottom: 15px" size="4">
-                        <img class="img-tour2"src="assets/img/Arvi.jpg"alt="service">
+                        <img class="img-tour2"src="assets/img/Parapente-medellin.jpg"alt="service">
                     </ion-col>
                     <ion-col style="padding-bottom: 15px" size="4">
                         <img src="assets/img/Fat-tour.jpg" class="img-tour" alt="service">
