--- a/beauty-app/src/app/pages/social/social.page.scss
+++ b/beauty-app/src/app/pages/social/social.page.scss
@@ -1,3 +1,16 @@
+.loader{
+        margin-top: 0;
+        color: aliceblue;
+        font-family: unset;
+        font-size: 18px;
+}
+.mar-top{
+        margin-top: 3.5rem !important;
+}
+.center{
+        display: flex;
+        margin: 0 auto;
+}
 .box-comm{
         border-top: #ececec 1px solid;
 }
