--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<ion-content 
+<ion-content *ngIf="!loading" 
 [scrollEvents]="true"
 (ionScrollStart)="logScrollStart()">
     <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
@@ -99,4 +99,13 @@
             </ion-fab-button>
         </ion-fab-list>
     </ion-fab>
+</ion-content>
+<ion-content *ngIf="loading">
+    <div  class="mar-top loading center">
+        <div class="ldio-0crlo2y4m0zh">
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <p class="loader ion-text-center">Loading..</p>
 </ion-content>
