--- a/beauty-app/src/app/components/profile-review-blog/profile-review-blog.component.html
+++ b/beauty-app/src/app/components/profile-review-blog/profile-review-blog.component.html
@@ -6,7 +6,7 @@
   <ion-grid class="grid-photos">
     <ion-row>
       <ion-col class="padding-img" *ngFor="let item of img.images" size="6" size-md="4" size-lg="4">
-        <img src="{{item.img}}" alt="">
+        <img src="{{item}}" alt="">
       </ion-col>
     </ion-row>
   </ion-grid>
