--- a/beauty-app/src/app/components/profile-review-blog/profile-review-blog.component.scss
+++ b/beauty-app/src/app/components/profile-review-blog/profile-review-blog.component.scss
@@ -1,3 +1,10 @@
+.mar-top{
+    margin-top: 3.5rem !important;
+}
+.center{
+    display: flex;
+    margin: 0 auto;
+}
 .icon-camera{
     font-size: 80px;
     margin: 0 auto;
