--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -15,12 +15,12 @@
                             <ion-row>
                                 <ion-col size="2">
                                     <ion-avatar class="avatar-social">
-                                        <img src="{{hero.getDomain()}}/file/profile/{{post.user.img_perfil}}">
+                                        <img routerLink="/profile/{{post.user.id}}" src="{{hero.getDomain()}}/file/profile/{{post.user.img_perfil}}">
                                     </ion-avatar>
                                 </ion-col>
 
                                 <ion-col size="9">
-                                    <h2 class="social-name">{{post.user.nombres}}</h2>
+                                    <h2 class="social-name" routerLink="/profile/{{post.user.id}}">{{post.user.nombres}}</h2>
 
                                     <h5 class="postage">Posted {{post.fecha}}</h5>
                                 </ion-col>
@@ -37,7 +37,7 @@
                         <ion-grid class="padding-fix">
                             <ion-row>
                                 <ion-slides *ngIf="post.images.length > 1" pager="true" [options]="slideOpts">
-                                    <ion-slide *ngFor="let image of post.images">
+                                    <ion-slide style="height: 100%; width: 100%; object-fit: contain" *ngFor="let image of post.images">
                                         <img [src]="hero.getDomain()+'/file/blog/'+image.imagen">
                                     </ion-slide>
                                 </ion-slides>
