--- a/beauty-app/src/app/pages/social/social.page.scss
+++ b/beauty-app/src/app/pages/social/social.page.scss
@@ -1,3 +1,7 @@
+.slider-slides{
+        display: flex;
+        flex-direction: row;
+   }
 .loader{
         margin-top: 0;
         color: aliceblue;
