--- a/beauty-app/src/app/pages/social/social.page.html
+++ b/beauty-app/src/app/pages/social/social.page.html
@@ -6,79 +6,7 @@
         </ion-refresher-content>
     </ion-refresher>
 
-    <ion-grid>
-        <ion-row>
-            <ion-col *ngFor="let post of cards; index as i;" size="12" size-sm="12" size-md="4" size-lg="4">
-                <ion-card class="card-social">
-                    <ion-card-header class="padding-fix">
-                        <ion-grid class="height-fix">
-                            <ion-row>
-                                <ion-col size="2">
-                                    <ion-avatar class="avatar-social">
-                                        <img routerLink="/profile/{{post.user.id}}" src="{{hero.getDomain()}}/file/profile/{{post.user.img_perfil}}">
-                                    </ion-avatar>
-                                </ion-col>
-
-                                <ion-col size="9">
-                                    <h2 class="social-name" routerLink="/profile/{{post.user.id}}">{{post.user.nombres}}</h2>
-
-                                    <h5 class="postage">Posted {{post.fecha}}</h5>
-                                </ion-col>
-
-                                <ion-col size="1">
-                                    <ion-icon (click)="presentPopover($event)" class="icon-more" name="md-more">
-                                    </ion-icon>
-                                </ion-col>
-                            </ion-row>
-                        </ion-grid>
-                    </ion-card-header>
-
-                    <ion-card-content class="padding-fix">
-                        <ion-grid class="padding-fix">
-                            <ion-row>
-                                <ion-slides *ngIf="post.images.length > 1" pager="true" [options]="slideOpts">
-                                    <ion-slide style="height: 100%; width: 100%; object-fit: contain" *ngFor="let image of post.images">
-                                        <img [src]="hero.getDomain()+'/file/blog/'+image.imagen">
-                                    </ion-slide>
-                                </ion-slides>
-                                <img *ngIf="post.images.length === 1"
-                                    [src]="hero.getDomain()+'/file/blog/'+post.images[0].imagen">
-                                <ion-col size="2">
-                                    <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/like.svg"
-                                        *ngIf="!post.liked">
-                                    <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/likeFocus.svg"
-                                        *ngIf="post.liked">
-                                    <br>
-                                    <h1 class="likes ion-text-center">{{post.likes_count}}</h1>
-                                </ion-col>
-                                <ion-col size="10">
-                                    <h1 class="tinytext">
-                                        {{post.descripcion}}</h1>
-                                </ion-col>
-                                <ion-col *ngIf="post.comments.length > 0" size="12" class="box-comm">
-                                    <p *ngFor="let comm of post.comments"> <b>{{comm.user.nombres}}</b>
-                                        {{comm.comentario}}</p>
-                                </ion-col>
-                                <ion-col size="12">
-                                    <div>
-                                        <ion-item class="line-up">
-                                            <ion-input placeholder="Add Comment" [(ngModel)]="this.cards[i].comment">
-                                            </ion-input>
-
-                                            <ion-button fill="clear" expand="full">
-                                                <ion-text color="primary-bl" slot="end" (click)="comment(i)">Comment
-                                                </ion-text>
-                                            </ion-button>
-                                        </ion-item>
-                                    </div>
-                                </ion-col>
-                            </ion-row>
-                        </ion-grid>
-                    </ion-card-content>
-                </ion-card>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+    <app-post [posts]="cards"></app-post>
     <ion-fab *ngIf="toper" horizontal="start" vertical="bottom" slot="fixed">
         <ion-fab-button size="small" (click)="ScrollToTop()" color="primary">
             <ion-icon name="arrow-up"></ion-icon>
