--- a/beauty-app/src/app/components/menu/menu.component.scss
+++ b/beauty-app/src/app/components/menu/menu.component.scss
@@ -1,5 +1,5 @@
 h1,h2,h3,h4,h5,p,label{
-  font-family: 'bioliquidregular';
+  font-family: sans-serif;
 }
 .font{
   font-family: 'bioliquidregular';
