--- a/beauty-app/src/app/pages/v-profile/v-profile.page.html
+++ b/beauty-app/src/app/pages/v-profile/v-profile.page.html
@@ -12,11 +12,13 @@
       <ion-col class="content-img" size="12" size-md="8" size-lg="6">
         <div class="ion-text-center">
           <ion-avatar class="profile-img">
-            <img [src]="hero.getDomain() + '/file/profile/' + 'user_avatar1583872108.jpeg'" alt="profileuser">
+            <img
+              [src]="user.img_perfil === null ? '/assets/img/no-profile.png' : hero.getDomain() + '/file/profile/' + user.img_perfil"
+              alt="profileuser">
           </ion-avatar>
-          <h4>John Doe</h4>
-          <h5>johndoe@gmail.com</h5>
-        </div>      
+          <h4>{{user.nombres}} {{user.apellidos}}</h4>
+          <br>
+        </div>
         <ion-toolbar>
           <ion-segment color="primary-bl" (ionChange)="segmentChanged($event)" value="images">
             <ion-segment-button value="images">
@@ -27,6 +29,96 @@
             </ion-segment-button>
           </ion-segment>
         </ion-toolbar>
+        <div *ngIf="content==='images'">
+          <ion-card color="light" class="no-margin">
+            <ion-grid class="grid-photos">
+              <ion-row>
+                <ion-col class="no-padding" *ngFor="let item of data" size="6" size-md="4" size-lg="4">
+                  <img class="img-carr" [src]="hero.getDomain() + '/file/blog/' + item.images[0].imagen" alt="">
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card>
+        </div>
+        <div *ngIf="content==='albums'">
+          <ion-card color="light" class="no-margin" >
+            <ion-grid>
+              <ion-row>
+                <ion-col class="no-margin" *ngFor="let post of data; index as i;" size="12">
+                  <ion-card class="card-social">
+                    <ion-card-header class="padding-fix">
+                      <ion-grid class="height-fix">
+                        <ion-row>
+                          <ion-col size="2">
+                            <ion-avatar class="avatar-social">
+                              <img routerLink="/profile/{{post.user.id}}"
+                                src="{{hero.getDomain()}}/file/profile/{{post.user.img_perfil}}">
+                            </ion-avatar>
+                          </ion-col>
+  
+                          <ion-col size="9">
+                            <h2 class="social-name" routerLink="/profile/{{post.user.id}}">{{post.user.nombres}}</h2>
+  
+                            <h5 class="postage">Posted {{post.fecha}}</h5>
+                          </ion-col>
+  
+                          <ion-col size="1">
+                            <ion-icon (click)="presentPopover($event)" class="icon-more" name="md-more">
+                            </ion-icon>
+                          </ion-col>
+                        </ion-row>
+                      </ion-grid>
+                    </ion-card-header>
+  
+                    <ion-card-content class="padding-fix">
+                      <ion-grid class="padding-fix">
+                        <ion-row>
+                          <ion-slides *ngIf="post.images.length > 1" pager="true" [options]="slideOpts">
+                            <ion-slide style="height: 100%; width: 100%; object-fit: contain"
+                              *ngFor="let image of post.images">
+                              <img [src]="hero.getDomain()+'/file/blog/'+image.imagen">
+                            </ion-slide>
+                          </ion-slides>
+                          <img *ngIf="post.images.length === 1"
+                            [src]="hero.getDomain()+'/file/blog/'+post.images[0].imagen">
+                          <ion-col size="2">
+                            <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/like.svg"
+                              *ngIf="!post.liked">
+                            <img (click)="likeFocus(i)" class="likeicon" src="/assets/icon/likeFocus.svg"
+                              *ngIf="post.liked">
+                            <br>
+                            <h1 class="color-like likes ion-text-center">{{post.likes_count}}</h1>
+                          </ion-col>
+                          <ion-col size="10">
+                            <h1 class="tinytext color-like">
+                              {{post.descripcion}}</h1>
+                          </ion-col>
+                          <ion-col *ngIf="post.comments.length > 0" size="12" class="box-comm">
+                            <p *ngFor="let comm of post.comments" class="color-like"> <b>{{comm.user.nombres}}</b>
+                              {{comm.comentario}}</p>
+                          </ion-col>
+                          <ion-col size="12">
+                            <div>
+                              <ion-item class="line-up">
+                                <ion-input placeholder="Add Comment" [(ngModel)]="this.data[i].comment">
+                                </ion-input>
+  
+                                <ion-button fill="clear" expand="full">
+                                  <ion-text color="primary-bl" slot="end" (click)="comment(i)">Comment
+                                  </ion-text>
+                                </ion-button>
+                              </ion-item>
+                            </div>
+                          </ion-col>
+                        </ion-row>
+                      </ion-grid>
+                    </ion-card-content>
+                  </ion-card>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card>
+        </div>
       </ion-col>
       <ion-col size="0" size-md="2" size-lg="3"></ion-col>
     </ion-row>
